--- a/style.css
+++ b/style.css
@@ -82,3 +82,13 @@ body {
 .card .info p span {
   font-weight: bold;
 }
+
+/*mensaje de error*/
+.error {
+  color: #f5160e;
+  background-color: #fa9b9b;
+  border: 1px solid #f80505;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+}
