--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
+* {
+  margin: 0;
+}
 
 body {
   font-family: Arial, sans-serif;
-  margin: 20px;
- background:#2c3e50b6 ;
-
+  background: #2c3e50b6;
 }
 
 .header {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  width: 100%;
   height: 6rem;
   background: rgb(16, 31, 44);
+  padding: 1rem;
 }
-
 
 .search-bar {
   display: flex;
@@ -26,7 +26,7 @@ body {
   padding: 10px;
   font-size: 16px;
   border-radius: 25px 0 0 25px;
-  border: 2px solid  rgb(16, 31, 44);
+  border: 2px solid rgb(16, 31, 44);
   outline: none;
   width: 250px;
 }
@@ -35,7 +35,7 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   border-radius: 0 25px 25px 0;
-  border: 2px solid  rgb(16, 31, 44);
+  border: 2px solid rgb(16, 31, 44);
   background-color: rgb(16, 31, 44);
   color: white;
   cursor: pointer;
@@ -48,31 +48,30 @@ body {
 }
 
 .card {
- height: auto;
+  height: auto;
   padding: 20px;
-  border-radius: 15px;
+  border-radius: 1rem;
   max-width: 300px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: auto;
   text-align: center;
-  background:  rgb(16, 31, 44);
+  background: rgb(16, 31, 44);
   color: aliceblue;
+  display: none;
 }
 
 .card img {
-  width: 80%;
   height: auto;
-  border-radius: 15px;
+  border-radius: 1rem;
 }
 
 .card .info {
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content:start;
-  align-items:flex-start
-
+  justify-content: start;
+  align-items: flex-start
 }
 
 .card .info p {
@@ -85,10 +84,21 @@ body {
 
 /*mensaje de error*/
 .error {
-  color: #f5160e;
   background-color: #fa9b9b;
   border: 1px solid #f80505;
   border-radius: 5px;
   padding: 10px;
-  margin-top: 10px;
+  margin: 1rem 5rem;
+  display: none;
+}
+
+.loading {
+  border: 1px solid green;
+  background: white;
+  text-align: center;
+  display: none;
+}
+
+.active {
+  display: block;
 }
